[package]
name = "xp-ai-function"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

[lints.rust]
unsafe_code = "forbid"
unused = "allow" # For exploratory dev.

[dependencies]
# -- Async
tokio = { version = "1", features = ["full"] }
# -- AI
async-openai = "0.19"
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["macros"] }
# -- Router
rpc-router = "=0.1.3" # lock to specific version during 0.1.x
# -- Json Schema
schemars = {version = "0.8"}
# -- Others
derive_more = {version = "1.0.0-beta", features = ["from"] }